--- a/quiz_project/quiz/templates/quiz/login.html
+++ b/quiz_project/quiz/templates/quiz/login.html
@@ -1,15 +1,40 @@
 {% extends 'quiz/base.html' %}
+{% load static %}
 
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h2 class="mb-4">Login</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-        <p class="mt-3">Don't have an account? <a href="{% url 'quiz:signup' %}">Sign Up</a></p>
+<div class="auth-container">
+  <div class="auth-card">
+    <div class="auth-header">
+      <h2>Welcome Back</h2>
+      <p class="text-muted">Login to continue your French learning journey</p>
     </div>
+
+    <form method="post" class="auth-form">
+      {% csrf_token %}
+
+      <div class="form-group">
+        <label for="id_username">Username</label>
+        <input type="text" name="username" id="id_username" class="form-control" placeholder="Enter your username" required>
+      </div>
+
+      <div class="form-group">
+        <label for="id_password">Password</label>
+        <input type="password" name="password" id="id_password" class="form-control" placeholder="Enter your password" required>
+        <small class="text-right d-block mt-1">
+          <a href="#">Forgot password?</a>
+        </small>
+      </div>
+
+      <button type="submit" class="btn btn-auth btn-block">
+        <i class="fas fa-sign-in-alt mr-2"></i> Login
+      </button>
+
+      <div class="auth-footer">
+        <p class="text-center">Don't have an account?
+          <a href="{% url 'quiz:signup' %}" class="auth-link">Sign up here</a>
+        </p>
+      </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
